Algunas correcciones
Agregue mas pruebas, solo falta comentar las pruebas que dan error para que deje compilar correctamente.