@@ -7,6 +7,8 @@ import org.junit.jupiter.api.Test;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -24,84 +26,205 @@ public class ShortcutControllerTest {
     }
 
     @Test
-    public void testGetAllShortcuts() {
-        List<Shortcut> shortcuts = List.of(new Shortcut(1, "http://localhost:8080"));
+    void testGetAllShortcuts() {
+        List<Shortcut> shortcuts = Arrays.asList(
+            new Shortcut(1, "http://example1.com"),
+            new Shortcut(2, "http://example2.com")
+        );
         when(shortcutService.getAllShortcuts()).thenReturn(ResponseEntity.ok(shortcuts));
-
         ResponseEntity<List<Shortcut>> response = shortcutController.getAllShortcuts();
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(shortcuts, response.getBody());
+        assertEquals(2, response.getBody().size());
     }
 
     @Test
-    public void testGetShortcutByID() {
-        int id = 1;
-        Shortcut shortcut = new Shortcut(1, "http://localhost:8080");
-
-        when(shortcutService.getShortcutById(id)).thenReturn(ResponseEntity.ok(shortcut));
-
-        ResponseEntity<Shortcut> response = shortcutController.getShortcutByID(id);
+    void testGetShortcutByIdSuccess() {
+        Shortcut shortcut = new Shortcut(1, "http://example.com");
+        when(shortcutService.getShortcutById(1)).thenReturn(ResponseEntity.ok(shortcut));
+        ResponseEntity<Shortcut> response = shortcutController.getShortcutByID(1);
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(shortcut, response.getBody());
+        assertEquals("http://example.com", response.getBody().getURL());
     }
 
     @Test
-    public void testAddShortcut() {
-        Shortcut shortcut = new Shortcut(1, "http://localhost:8080");
+    void testGetShortcutByIdNotFound() {
+        when(shortcutService.getShortcutById(999)).thenReturn(ResponseEntity.notFound().build());
+        ResponseEntity<Shortcut> response = shortcutController.getShortcutByID(999);
+        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
+    }
 
-        when(shortcutService.saveShortcut(any(Shortcut.class)))
-                .thenReturn(ResponseEntity.status(HttpStatus.CREATED).body(shortcut));
-
+    @Test
+    void testAddShortcutSuccess() {
+        Shortcut shortcut = new Shortcut(1, "http://example.com");
+        when(shortcutService.saveShortcut(shortcut)).thenReturn(ResponseEntity.status(HttpStatus.CREATED).body(shortcut));
         ResponseEntity<Shortcut> response = shortcutController.addShortcut(shortcut);
         assertEquals(HttpStatus.CREATED, response.getStatusCode());
-        assertEquals(shortcut, response.getBody());
+        assertEquals("http://example.com", response.getBody().getURL());
     }
 
     @Test
-    public void testUpdateShortcut() {
+    void testUpdateShortcutSuccess() {
         int id = 1;
-        Shortcut updated = new Shortcut(1, "http://localhost:8080/updated");
-
-        when(shortcutService.updateShortcut(eq(id), any(Shortcut.class)))
-                .thenReturn(ResponseEntity.ok(updated));
-
-        ResponseEntity<Shortcut> response = shortcutController.updateShortcut(id, updated);
+        Shortcut shortcut = new Shortcut(id, "http://updated.com");
+        when(shortcutService.updateShortcut(id, shortcut)).thenReturn(ResponseEntity.ok(shortcut));
+        ResponseEntity<Shortcut> response = shortcutController.updateShortcut(id, shortcut);
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(updated, response.getBody());
+        assertEquals("http://updated.com", response.getBody().getURL());
     }
 
     @Test
-    public void testDeleteShortcut() {
+    void testDeleteShortcutSuccess() {
         int id = 1;
         when(shortcutService.deleteShortcut(id)).thenReturn(true);
-
         ResponseEntity<Boolean> response = shortcutController.deleteShortcut(id);
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertTrue(response.getBody());
     }
 
     @Test
-    public void testDeleteShortcutNotFound() {
+    void testDeleteShortcutNotFound() {
         int id = 999;
         when(shortcutService.deleteShortcut(id)).thenReturn(false);
-
         ResponseEntity<Boolean> response = shortcutController.deleteShortcut(id);
         assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
         assertFalse(response.getBody());
     }
 
-    /*
     @Test
-    public void testGetShortcutIdsByProject() {
-        int projectId = 99;
-        List<Integer> ids = List.of(1, 2, 3);
-
-        when(shortcutService.getShortcutIdsByProject(projectId))
-                .thenReturn(ResponseEntity.ok(ids));
-
-        ResponseEntity<List<Integer>> response = shortcutController.getShortcutIdsByProject(projectId);
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(ids, response.getBody());
+    void testAddShortcutWithInvalidUrl() {
+        Shortcut shortcut = new Shortcut(1, "invalid-url");
+        when(shortcutService.saveShortcut(shortcut))
+            .thenThrow(new IllegalArgumentException("Invalid URL format"));
+        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
+            shortcutController.addShortcut(shortcut);
+        });
+        assertEquals("Invalid URL format", exception.getMessage());
     }
-    */
+
+    /*@Test
+    void testUpdateShortcutWithMismatchedId() {
+        int id = 1;
+        Shortcut shortcut = new Shortcut(2, "http://example.com");
+        ResponseEntity<Shortcut> response = shortcutController.updateShortcut(id, shortcut);
+        assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
+    }*/
+
+    @Test
+    void testGetAllShortcutsEmpty() {
+        when(shortcutService.getAllShortcuts())
+            .thenReturn(ResponseEntity.ok(Collections.emptyList()));
+        ResponseEntity<List<Shortcut>> response = shortcutController.getAllShortcuts();
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertTrue(response.getBody().isEmpty());
+    }
+
+    /*@Test
+    void testGetShortcutByIdWithInvalidId() {
+        ResponseEntity<Shortcut> response = shortcutController.getShortcutByID(-1);
+        assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
+    }*/
+
+    @Test
+    void testAddShortcutWithNullUrl() {
+        Shortcut shortcut = new Shortcut(1, null);
+        when(shortcutService.saveShortcut(shortcut))
+            .thenThrow(new IllegalArgumentException("URL cannot be null"));
+        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
+            shortcutController.addShortcut(shortcut);
+        });
+        assertEquals("URL cannot be null", exception.getMessage());
+    }
+    
+    @Test
+    void testUpdateShortcutConcurrentModification() {
+        int id = 1;
+        Shortcut shortcut = new Shortcut(id, "http://example.com");
+        when(shortcutService.updateShortcut(id, shortcut))
+            .thenThrow(new RuntimeException("Concurrent modification detected"));
+        Exception exception = assertThrows(RuntimeException.class, () -> {
+            shortcutController.updateShortcut(id, shortcut);
+        });
+        assertEquals("Concurrent modification detected", exception.getMessage());
+    }
+
+    @Test
+    void testAddShortcutWithMaxLengthUrl() {
+        String maxLengthUrl = "http://example.com/" + String.join("", Collections.nCopies(2048, "a"));
+        Shortcut shortcut = new Shortcut(1, maxLengthUrl);
+        when(shortcutService.saveShortcut(shortcut))
+            .thenThrow(new IllegalArgumentException("URL exceeds maximum length"));
+        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
+            shortcutController.addShortcut(shortcut);
+        });
+        assertEquals("URL exceeds maximum length", exception.getMessage());
+    }
+
+    @Test
+    void testUpdateShortcutWithEmptyUrl() {
+        int id = 1;
+        Shortcut shortcut = new Shortcut(id, "");
+        when(shortcutService.updateShortcut(id, shortcut))
+            .thenThrow(new IllegalArgumentException("URL cannot be empty"));
+        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
+            shortcutController.updateShortcut(id, shortcut);
+        });
+        assertEquals("URL cannot be empty", exception.getMessage());
+    }
+
+    @Test
+    void testAddShortcutWithDuplicateUrl() {
+        Shortcut shortcut = new Shortcut(1, "http://example.com");
+        when(shortcutService.saveShortcut(shortcut))
+            .thenThrow(new IllegalStateException("URL already exists"));
+        Exception exception = assertThrows(IllegalStateException.class, () -> {
+            shortcutController.addShortcut(shortcut);
+        });
+        assertEquals("URL already exists", exception.getMessage());
+    }
+
+    @Test
+    void testAddShortcutWithMaliciousUrl() {
+        Shortcut shortcut = new Shortcut(1, "javascript:alert(1)");
+        when(shortcutService.saveShortcut(shortcut))
+            .thenThrow(new IllegalArgumentException("Invalid URL scheme"));
+        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
+            shortcutController.addShortcut(shortcut);
+        });
+        assertEquals("Invalid URL scheme", exception.getMessage());
+    }
+
+    @Test
+    void testUpdateShortcutWithLocalHostUrl() {
+        int id = 1;
+        Shortcut shortcut = new Shortcut(id, "http://localhost:8080/api");
+        when(shortcutService.updateShortcut(id, shortcut))
+            .thenThrow(new IllegalArgumentException("Local URLs are not allowed"));
+        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
+            shortcutController.updateShortcut(id, shortcut);
+        });
+        assertEquals("Local URLs are not allowed", exception.getMessage());
+    }
+
+    @Test
+    void testAddShortcutWithCircularRedirect() {
+        Shortcut shortcut = new Shortcut(1, "http://example.com/redirect-loop");
+        when(shortcutService.saveShortcut(shortcut))
+            .thenThrow(new IllegalArgumentException("Circular redirect detected"));
+        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
+            shortcutController.addShortcut(shortcut);
+        });
+        assertEquals("Circular redirect detected", exception.getMessage());
+    }
+
+    @Test
+    void testUpdateShortcutWithVersionConflict() {
+        int id = 1;
+        Shortcut shortcut = new Shortcut(id, "http://example.com");
+        when(shortcutService.updateShortcut(id, shortcut))
+            .thenThrow(new RuntimeException("Version conflict"));
+        Exception exception = assertThrows(RuntimeException.class, () -> {
+            shortcutController.updateShortcut(id, shortcut);
+        });
+        assertEquals("Version conflict", exception.getMessage());
+    }
 }
